Closed
Bug 254771
Opened 21 years ago
Closed 21 years ago
Remove AssertNoCSSRules(lastPresHintRN, lastAgentRN) from nsStyleSet::FileRules
Categories
(Core :: CSS Parsing and Computation, defect)
Core
CSS Parsing and Computation
Tracking
()
RESOLVED
FIXED
People
(Reporter: jwatt, Assigned: jwatt)
Details
Attachments
(1 file)
|
1.13 KB,
patch
|
bzbarsky
:
review+
dbaron
:
superreview+
|
Details | Diff | Splinter Review |
When loading SVG documents this line is raising many unnecessary assertions.
According to bz, who appears to have written the code, it's "just an invariant
that we were asserting but that doesn't _have_ to hold". Although it happens to
hold for the HTML implementation of presentational hints, SVG uses CSS rules as
preshints. Patch to remove this line comming up.
| Assignee | ||
Comment 1•21 years ago
|
||
| Assignee | ||
Updated•21 years ago
|
Attachment #155476 -
Flags: superreview?(dbaron)
Attachment #155476 -
Flags: superreview?(dbaron) → superreview+
| Assignee | ||
Updated•21 years ago
|
Attachment #155476 -
Flags: review?(bzbarsky)
Comment 2•21 years ago
|
||
Comment on attachment 155476 [details] [diff] [review]
patch
r=bzbarsky
Attachment #155476 -
Flags: review?(bzbarsky) → review+
Checked in.
Checking in nsStyleSet.cpp;
/cvsroot/mozilla/content/base/src/nsStyleSet.cpp,v <-- nsStyleSet.cpp
new revision: 3.167; previous revision: 3.166
done
Status: NEW → RESOLVED
Closed: 21 years ago
Resolution: --- → FIXED
You need to log in
before you can comment on or make changes to this bug.
Description
•