Bug 254771 - Remove AssertNoCSSRules(lastPresHintRN, lastAgentRN) from nsStyleSet::FileRules.  Patch by jonathan.watt@strath.ac.uk, r=bz, sr=dbaron